# trapiron

./: Cargo.toml  README.md
doc/: add_block.md  obj.md
src/: client.rs  content.rs  crash.rs  gui.rs  logic.rs  main.rs  world.rs
src/client/: control.rs  view.rs
src/content/: block.rs
src/content/block/: basic.rs  pusher.rs
src/domain/: tests.rs
src/gui/: asset.rs  backend_glium.rs  debug.rs  draw.rs  fragment_3d.glsl  primitive.rs  vertex_3d.glsl
src/gui/backend_glium/: primitive.rs  winit_lifecycle.rs
src/gui/backend_glium/shader/: fragment.glsl  vertex.glsl
src/world/: array3.rs  character.rs  vec_iter.rs
