[package]
name = "trapiron"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.0", features = ["bytemuck"] }
# glium = "0.36"
glium = { git = "https://github.com/OLEGSHA/glium.git", branch = "support-all-mat-variants-in-uniforms" }
image = { version = "0.25.2", default-features = false, features = ["png"] }
include_dir = { version = "0.7.4", default-features = false }
